--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
-
----
-
-### index.html
-
-```html
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -14,20 +8,22 @@
 </head>
 <body>
   <header>
-    <h1>Bienvenido a la Clase de Francés</h1>
+    <h1>Clase de Francés</h1>
     <nav>
-      <ul>
-        <li><a href="grade1.html">Grado 1</a></li>
-        <li><a href="grade2.html">Grado 2</a></li>
-        <li><a href="grade3.html">Grado 3</a></li>
-        <li><a href="grade4.html">Grado 4</a></li>
-        <li><a href="grade5.html">Grado 5</a></li>
-      </ul>
+      <a href="index.html">Inicio</a>
+      <a href="grade1.html">Grado 1</a>
+      <a href="grade2.html">Grado 2</a>
+      <a href="grade3.html">Grado 3</a>
+      <a href="grade4.html">Grado 4</a>
+      <a href="grade5.html">Grado 5</a>
     </nav>
   </header>
   <main>
     <section>
-      <p>Elige un grado para empezar a practicar. Cada grado consta de 20 ejercicios que te permitirán evaluar y mejorar tu conocimiento del francés.</p>
+      <p>
+        ¡Bienvenido! Selecciona un grado para empezar a practicar tus conocimientos de francés. 
+        Cada grado contiene 20 ejercicios y al final obtendrás una calificación de 1 a 100.
+      </p>
     </section>
   </main>
   <footer>
@@ -35,4 +31,3 @@
   </footer>
 </body>
 </html>
-
